--- a/apps/admin/src/app/app.component.html
+++ b/apps/admin/src/app/app.component.html
@@ -1,10 +1,1 @@
-<div class="container">
-    <div class="row">
-        <div class="col col-md-3 col-sm-12">
-            <app-main-menu></app-main-menu>
-        </div>
-        <div class="col col-md-9 col-sm-12">
-            <app-dashboard></app-dashboard>
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
