--- a/apps/admin/src/assets/styles/styles.scss
+++ b/apps/admin/src/assets/styles/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'reset';
-@import 'form';
+@import 'layouts/form';
 @import 'menu';
 @import 'grid';
+@import 'base/typography';
