--- a/apps/admin/src/app/dashboard/dashboard.component.html
+++ b/apps/admin/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,10 @@
-<h1>Dashboard</h1>
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="row">
+        <div class="col col-md-3 col-sm-12">
+            <app-main-menu></app-main-menu>
+        </div>
+        <div class="col col-md-9 col-sm-12">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
