--- a/apps/admin/src/assets/styles/layouts/_grid.scss
+++ b/apps/admin/src/assets/styles/layouts/_grid.scss
@@ -1,3 +1,34 @@
 .full-screen {
     height: 100vh;
 }
+
+.container {
+    width: 100%;
+    position: relative;
+}
+
+@mixin padding($space:24px) {
+    padding: $space;
+}
+@mixin margin($space:24px) {
+    margin: $space;
+}
+@mixin m-top($space:24px) {
+    margin-top: $space;
+}
+@mixin m-bottom($space:24px) {
+    margin-bottom: $space;
+}
+@mixin m-left($space:24px) {
+    margin-left: $space;
+}
+@mixin m-right($space:24px) {
+    margin-right: $space;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
