--- a/apps/admin/src/app/dashboard/dashboard.component.html
+++ b/apps/admin/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
-<div class="container">
-    <div class="row">
-        <div class="col col-md-3 col-sm-12">
+<div class="container full">
+    <div class="flex">
+        <div class="col full-screen" id="main-menu">
             <app-main-menu></app-main-menu>
         </div>
-        <div class="col col-md-9 col-sm-12">
+        <div class="col full-screen" id="page-display">
             <router-outlet></router-outlet>
         </div>
     </div>
