--- a/apps/admin/src/app/dashboard/products/new-product/new-product.component.html
+++ b/apps/admin/src/app/dashboard/products/new-product/new-product.component.html
@@ -1,1 +1,44 @@
-<p>new-product works!</p>
+<h1>Add New</h1>
+<form (ngSubmit)="onFormSubmit" #productform id="new-product-form">
+    <div class="flex">
+        <div class="col">
+            <div class="form-field-wrapper">
+                <h2>Product Title</h2>
+                <input type="text" name="title" ngModel class="form-control" placeholder="Product Title">
+            </div>
+            <div class="form-field-wrapper">
+                <h2>Product Description</h2>
+                <textarea ngModel name="description" class="form-control"></textarea>
+            </div>
+            <div class="form-field-wrapper">
+                <button type="submit">Save Product</button>
+            </div>
+        </div>
+        <div class="col">
+            <div class="form-field-wrapper">
+                <h2>Product Gallery</h2>
+                <input type="file" name="gallery-images" ngModel class="form-control">
+            </div>
+            <div class="form-field-wrapper">
+                <h2>Product Image</h2>
+                <a (click)="imageUpload()">Set product image</a>
+                <div [ngClass]="{'hide': !showImageUpload}">
+                    <input type="file" name="product-image" ngModel class="form-control">
+                </div>
+            </div>
+            <div class="form-field-wrapper">
+                <h2>Product Categories</h2>
+                <div class="categories">
+                    @for (cat of categories; track cat.title) {
+                        <label>
+                            <input type="checkbox" name='{{cat.title}}' ngModel class="form-control"/>
+                            {{ cat.title }}
+                        </label>
+                    }
+                </div>
+                <div class="link"></div>
+                <input type="text" name="category" ngModel class="form-control">
+            </div>
+        </div>
+    </div>
+</form>
