--- a/apps/admin/src/app/main-menu/ecommerce-nav/ecommerce-nav.component.html
+++ b/apps/admin/src/app/main-menu/ecommerce-nav/ecommerce-nav.component.html
@@ -1,12 +1,14 @@
-<li>
-    <a routerLink="">Ecommerce</a>
-</li>
-<ul class="mb-4 position-relative">
-    @for (item of menu; track item.name) {
-        <li>
-            <a href="#" routerLink={{item.url}}>{{item.name}}</a>
-        </li>
-    } @empty {
-        <li></li>
-    }
+<ul class="menu">
+    <li class="item">
+        <a routerLink="">Ecommerce</a>
+        <ul class="child">
+            @for (item of menu; track item.name) {
+                <li class="item">
+                    <a href="#" routerLink={{item.url}}>{{item.name}}</a>
+                </li>
+            } @empty {
+                <li></li>
+            }
+        </ul>
+    </li>
 </ul>
