--- a/apps/admin/src/assets/styles/base/_typography.scss
+++ b/apps/admin/src/assets/styles/base/_typography.scss
@@ -14,3 +14,10 @@ h2 {
 h3 {
     font-size: 16px;
 }
+
+h1, h2, h3 {
+    margin-bottom: 16px;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
