--- a/apps/admin/src/assets/styles/layouts/_menu.scss
+++ b/apps/admin/src/assets/styles/layouts/_menu.scss
@@ -1,10 +1,49 @@
 #main-menu {
-    height: 100vh;
+    width: 190px;
     background: #1b1e2e;
+    z-index: 2;
+    padding: 20px 0 20px 20px;
     a {
         color: #fff;
         text-decoration: none;
         margin-bottom: 6px;
         display: block;
+    }
+    .child {
+        left: 170px;
+        top: 0;
+        background: #1b1e2e;
+        width: 200px;
+        &::before {
+            content: '';
+            width: 0; 
+            height: 0; 
+            border-top: 10px solid transparent; 
+            border-bottom: 10px solid transparent; /* 40px height (20+20) */
+            border-right: 14px solid green;
+            position:absolute;
+            left:-14px;
+        }
+    }
+}
+
+.menu {
+    position: relative;
+    .item {
+        a {
+            padding: 6px;
+        }
+    }
+    .child {
+        display: none;
+        position: absolute;
+        &:hover {
+            display: block;
+        }
+    }
+    &:hover {
+        .child {
+            display: block;
+        }
     }
 }
