Added create category on new product page.

--- a/apps/admin/src/app/dashboard/dashboard.component.html
+++ b/apps/admin/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container full">
-    <div class="flex">
+    <div id="dashboard-page" class="flex">
         <div class="col full-screen" id="main-menu">
             <app-main-menu></app-main-menu>
         </div>
