--- a/apps/admin/src/assets/styles/base/_globals.scss
+++ b/apps/admin/src/assets/styles/base/_globals.scss
@@ -3,3 +3,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .hide {
     display: none;
 }
+
+.link {
+    text-decoration: underline;
+    color: #2271b1;
+    margin: 6px 0;
+}
