--- a/apps/admin/src/assets/styles/layouts/_menu.scss
+++ b/apps/admin/src/assets/styles/layouts/_menu.scss
@@ -1,6 +1,6 @@
 #main-menu {
     width: 190px;
-    background: #1b1e2e;
+    background: #1D2327;
     z-index: 2;
     padding: 20px 0 20px 20px;
     a {
