--- a/apps/admin/src/app/dashboard/products/products.component.html
+++ b/apps/admin/src/app/dashboard/products/products.component.html
@@ -46,7 +46,9 @@
        <!-- Symbol Column -->
      <ng-container matColumnDef="categories">
         <th mat-header-cell *matHeaderCellDef> Categories </th>
-        <td mat-cell *matCellDef="let element"> {{element.categories}} </td>
+        <td mat-cell *matCellDef="let element">@for (category of element.categories; track category.title) {
+          @if ($first) { {{category.title}} } @else { {{", "}}{{category.title}} }
+        } </td>
       </ng-container>
 
         <!-- Symbol Column -->
