--- a/apps/admin/src/assets/styles/components/_form-fields.scss
+++ b/apps/admin/src/assets/styles/components/_form-fields.scss
@@ -7,4 +7,13 @@
 .form-control {
     width: 100%;
     padding: 8px;
+    box-sizing: border-box;
+}
+
+input[type=checkbox] {
+    width: auto;
+}
+
+label {
+    display: block;
 }
