added a bunch of work.

--- a/apps/admin/src/app/dashboard/dashboard.component.html
+++ b/apps/admin/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
 <div class="container full">
+    <nav id="main-toolbar" class="toolbar">
+        <a (click)="onSignOut()" class="">Sign Out</a>
+    </nav>
     <div id="dashboard-page" class="flex">
         <div class="col full-screen" id="main-menu">
             <app-main-menu></app-main-menu>
