--- a/apps/admin/src/assets/styles/base/_globals.scss
+++ b/apps/admin/src/assets/styles/base/_globals.scss
@@ -9,3 +9,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: #2271b1;
     margin: 6px 0;
 }
+
+small {
+    display: block;
+}
