--- a/apps/admin/src/assets/styles/styles.scss
+++ b/apps/admin/src/assets/styles/styles.scss
@@ -49,3 +49,4 @@ $admin-theme: mat.define-light-theme((
 @import 'pages/dashboard';
 @import 'components/form-fields';
 @import 'components/buttons';
+@import 'components/toolbar';
