--- a/apps/admin/src/assets/styles/utils/_variables.scss
+++ b/apps/admin/src/assets/styles/utils/_variables.scss
@@ -3,7 +3,10 @@ $dark-bg: #1d2327;
 $light-bg: #F0F0F1;
 $dark-header: #1d2327;
 $bright-bg: #3858e9;
-
+$blue-bg: #007cba;
+$child-menu-bg: #3c474e;
 // Fonts
+$menu-item-hover: #61abe2;
 $body-font: #757575;
+$header-font: #2c3338;
 $main-font: "Raleway", sans-serif;
