--- a/apps/admin/src/assets/styles/base/_typography.scss
+++ b/apps/admin/src/assets/styles/base/_typography.scss
@@ -16,8 +16,8 @@ h3 {
 }
 
 h1, h2, h3 {
-    margin-bottom: 16px;
+    margin-bottom: 12px!important;
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: $main-font; }
