--- a/apps/admin/src/assets/styles/components/_buttons.scss
+++ b/apps/admin/src/assets/styles/components/_buttons.scss
@@ -4,7 +4,7 @@ button {
     font-size: 13px;
     line-height: 2.15384615;
     min-height: 30px;
-    margin: 0;
+    margin: 0 0 10px 0;
     padding: 0 10px;
     cursor: pointer;
     border-width: 1px;
@@ -16,4 +16,6 @@ button {
     color: #2271b1;
     border-color: #2271b1;
     background: #f6f7f7;
+    width: 100%;
+    max-width: 300px;
 }
