--- a/apps/admin/src/assets/styles/pages/_new-product.scss
+++ b/apps/admin/src/assets/styles/pages/_new-product.scss
@@ -20,3 +20,9 @@
 #new-cat-field * {
     text-indent: 10px;
 }
+
+// Product Data
+.tabs-display {
+    div {display: none}
+}
+:target {display: block}
