styled singin page.

--- a/apps/admin/src/assets/styles/layouts/_forms.scss
+++ b/apps/admin/src/assets/styles/layouts/_forms.scss
@@ -59,6 +59,7 @@
     height: 44px;
     min-height: 44px;
     border: solid 1px #2271b1;
+    margin-bottom: 20px;
 }
 
 .auth-form-container.show-email-code {
