--- a/apps/admin/src/app/auth/signin/signin.component.html
+++ b/apps/admin/src/app/auth/signin/signin.component.html
@@ -1,7 +1,7 @@
 <div id="signin" class="container d-flex align-items-center py-4 bg-body-tertiary full-screen">
     <main class="form-signin w-100 m-auto">
         <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <h2 class="text-center">Please sign in</h2>
             <div class="form-floating">
               <label for="floatingInput">Email address</label>
               <input type="email" class="form-control" id="floatingInput" ngModel name="email" placeholder="name@example.com">
@@ -9,13 +9,6 @@
             <div class="form-floating">
               <label for="floatingPassword">Password</label>
               <input type="password" class="form-control" ngModel id="floatingPassword" name="password" placeholder="Password">
-            </div>
-        
-            <div class="form-check text-start my-3">
-              <input class="form-check-input" type="checkbox" ngModel name="remember-me" value="remember-me" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                Remember me
-              </label>
             </div>
             <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
             <p class="mt-5 mb-3 text-body-secondary">© 2017–2023</p>
