--- a/apps/admin/src/assets/styles/base/_typography.scss
+++ b/apps/admin/src/assets/styles/base/_typography.scss
@@ -19,5 +19,17 @@ h1, h2, h3 {
     margin-bottom: 12px!important;
 }
 
+.text-center {
+    text-align: center;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: $main-font; }
