--- a/apps/admin/src/assets/styles/components/_buttons.scss
+++ b/apps/admin/src/assets/styles/components/_buttons.scss
@@ -4,8 +4,8 @@ button {
     font-size: 13px;
     line-height: 2.15384615;
     min-height: 30px;
-    margin: 0 0 10px 0;
-    padding: 0 10px;
+    margin: 10px 0;
+    padding: 14px 0;
     cursor: pointer;
     border-width: 1px;
     border-style: solid;
@@ -13,9 +13,18 @@ button {
     border-radius: 3px;
     white-space: nowrap;
     box-sizing: border-box;
-    color: #2271b1;
-    border-color: #2271b1;
-    background: #f6f7f7;
+    color: #fff;
+    border-color: $blue-bg;
+    background: $blue-bg;
     width: 100%;
+    text-transform: uppercase;
     max-width: 300px;
+    font-weight: bold;
+    &.primary {
+        font-size: 16px;
+    }
+    &:hover {
+        background: #f6f7f7;
+        color: $blue-bg;
+    }
 }
