created seperate backend handler for httpClient when submiting auth forms.

--- a/apps/admin/src/app/auth/signin/signin.component.html
+++ b/apps/admin/src/app/auth/signin/signin.component.html
@@ -3,14 +3,12 @@
         <form (ngSubmit)="onSubmit(f)" #f="ngForm">
             <h2 class="text-center">Please sign in</h2>
             <div class="form-floating">
-              <label for="floatingInput">Email address</label>
-              <input type="email" class="form-control" id="floatingInput" ngModel name="email" placeholder="name@example.com">
+              <input type="email" class="form-control" id="floatingInput" ngModel name="email" placeholder="name@example.com" required>
             </div>
             <div class="form-floating">
-              <label for="floatingPassword">Password</label>
-              <input type="password" class="form-control" ngModel id="floatingPassword" name="password" placeholder="Password">
+              <input type="password" class="form-control" ngModel id="floatingPassword" name="password" placeholder="Password" required>
             </div>
-            <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+            <button type="submit">Sign in</button>
             <p class="mt-5 mb-3 text-body-secondary">© 2017–2023</p>
           </form>
     </main>
