--- a/apps/admin/src/assets/styles/utils/_variables.scss
+++ b/apps/admin/src/assets/styles/utils/_variables.scss
@@ -6,6 +6,7 @@ $bright-bg: #3858e9;
 $blue-bg: #007cba;
 $child-menu-bg: #3c474e;
 // Fonts
+$alert-font: #ed324d;
 $menu-item-hover: #61abe2;
 $body-font: #757575;
 $header-font: #2c3338;
