--- a/apps/admin/src/app/auth/signup/signup.component.html
+++ b/apps/admin/src/app/auth/signup/signup.component.html
@@ -2,23 +2,43 @@
     <main id="form-auth" class="w-100 m-auto">
         <form (ngSubmit)="onSubmit(f)" #f="ngForm">
             <h1 class="h3 mb-2 fw-normal">Please sign up</h1>
-            <div class="form-floating mb-2">
-              <label for="floatingInput">Email address</label>
-              <input type="email" name="email" ngModel class="form-control" id="floatingInput" placeholder="name@example.com">
-            </div>
-            <div class="form-floating mb-2">
-              <label for="floatingPassword">Password</label>
-              <input type="password" name="password" ngModel class="form-control" id="floatingPassword" placeholder="Password">
-            </div>
-            <div class="form-floating mb-2">
-              <label for="floatingText">First Name</label>
-                <input type="text" name="first_name" ngModel class="form-control" id="floatingText" placeholder="First Name">
+            <div class="form-floating">
+              <input
+                type="email"
+                name="email"
+                ngModel
+                #email="ngModel"
+                class="form-control"
+                id="floatingInput"
+                placeholder="name@example.com"
+                required
+              />
+              <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert">
+                Please enter a valid email address!
               </div>
-              <div class="form-floating mb-2">
-                <label for="floatingText">Last Name</label>
-                <input type="text" name="last_name" ngModel class="form-control" id="floatingText" placeholder="Last Name">
+            </div>
+            <div class="form-floating">
+              <input
+              type="password"
+              name="password"
+              #password="ngModel"
+              ngModel
+              class="form-control"
+              id="floatingPassword"
+              placeholder="Password"
+              required
+            />
+              <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert">
+                Please enter a password!
               </div>
-            <button class="btn btn-primary w-100 py-2" type="submit">Sign up</button>
+            </div>
+            <div class="form-floating">
+                <input type="text" name="first_name" ngModel class="form-control" id="floatingText" placeholder="First Name" />
+              </div>
+              <div class="form-floating">
+                <input type="text" name="last_name" ngModel class="form-control" id="floatingText" placeholder="Last Name" />
+              </div>
+            <button type="submit" [ngClass]="f.invalid ? 'invalid' : ''"[disabled]="f.invalid" >Sign up</button>
           </form>
     </main>
     <main id="form-email-code" class="w-100 m-auto">
