--- a/apps/admin/src/assets/styles/layouts/_forms.scss
+++ b/apps/admin/src/assets/styles/layouts/_forms.scss
@@ -3,7 +3,7 @@
     width: 100%;
     position: absolute;
     margin: auto;
-    max-width: 330px;
+    max-width: 300px;
     top: 50%;
     left: 50%;
 }
@@ -34,11 +34,15 @@
     position: absolute;
     transform: translate(100%, -50%);
     margin: auto;
-    max-width: 330px;
+    max-width: 340px;
     top: 50%;
     left: 100%;
+    button {
+        max-width: 340px;
+    }
     input {
         height: 100%;
+        text-align: center;
     }
     .wrapper {
         display: flex;
