added product data display handler.

--- a/apps/admin/src/assets/styles/base/_globals.scss
+++ b/apps/admin/src/assets/styles/base/_globals.scss
@@ -13,3 +13,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 small {
     display: block;
 }
+
+.show {
+    display: block!important;
+}
