--- a/apps/admin/src/app/dashboard/products/product-data/product-data.component.html
+++ b/apps/admin/src/app/dashboard/products/product-data/product-data.component.html
@@ -20,32 +20,32 @@
     <div class="tabs">
         <div class="tabs-menu">
             <div class="menu-item">
-                <a href="#general_product_data">
+                <a (click)="display_product_data('general_product_data')">
                     <span>General</span>
                 </a>
             </div>
             <div class="menu-item">
-                <a href="#inventory_product_data">
+                <a (click)="display_product_data('inventory_product_data')">
                     <span>Inventory</span>
                 </a>
             </div>
             <div class="menu-item">
-                <a href="#shipping_product_data">
+                <a (click)="display_product_data('shipping_product_data')">
                     <span>Shipping</span>
                 </a>
             </div>
             <div class="menu-item">
-                <a href="#linked_product_data">
+                <a (click)="display_product_data('linked_product_data')">
                     <span>Linked Products</span>
                 </a>
             </div>
             <div class="menu-item">
-                <a href="#attributes_product_data">
+                <a (click)="display_product_data('attributes_product_data')">
                     <span>Attributes</span>
                 </a>
             </div>
             <div class="menu-item">
-                <a href="#advanced_product_data">
+                <a (click)="display_product_data('advanced_product_data')">
                     <span>Advanced</span>
                 </a>
             </div>
